feat: config api to deploy

--- a/package.json
+++ b/package.json
@@ -1,13 +1,11 @@
 {
-  "name": "api-cost-server",
+  "name": "json-server-vercel",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Deploy JSON Server to Vercel",
+  "main": "api/server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node api/server.js"
   },
-  "author": "Douglas",
-  "license": "ISC",
   "dependencies": {
     "json-server": "^0.17.0"
   }
